--- a/requirements.txt
+++ b/requirements.txt
@@ -17,7 +17,7 @@ google-crc32c==1.5.0
 google-resumable-media==2.4.1
 googleapis-common-protos==1.59.0
 grpcio==1.51.3
-grpcio-status==1.51.3
+# grpcio-status==1.51.3
 idna==3.4
 importlib-metadata==6.1.0
 Jinja2==3.1.2
